[gd_scene load_steps=23 format=2]

[ext_resource path="res://Entities/Enemies/Slime/Slime.gd" type="Script" id=1]
[ext_resource path="res://Entities/Enemies/EnemyHurtbox.tscn" type="PackedScene" id=2]
[ext_resource path="res://Entities/Hitbox.tscn" type="PackedScene" id=3]
[ext_resource path="res://Entities/Enemies/PlayerDetectionZone.tscn" type="PackedScene" id=4]
[ext_resource path="res://Entities/Enemies/Stomp.tscn" type="PackedScene" id=5]
[ext_resource path="res://Entities/Enemies/Slime/New_slime_finished.png" type="Texture" id=6]
[ext_resource path="res://Entities/Enemies/EffectFSM.gd" type="Script" id=7]
[ext_resource path="res://Entities/Enemies/Stats.tscn" type="PackedScene" id=8]
[ext_resource path="res://Entities/Enemies/Slime/SlimeFSM.gd" type="Script" id=9]
[ext_resource path="res://Entities/FlashShader.tres" type="Material" id=10]
[ext_resource path="res://UI/HealthBar.tscn" type="PackedScene" id=11]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 16, 10 )

[sub_resource type="Animation" id=2]
resource_name = "Damaged"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:material:shader_param/flash_modifier")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 1.0, 0.0 ]
}

[sub_resource type="Animation" id=3]
resource_name = "Respawn"
length = 0.8
step = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:modulate:a")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 1.0, 0.4, 1.0, 0.4, 1.0 ]
}

[sub_resource type="Animation" id=4]
resource_name = "Attack"
length = 0.6
loop = true
step = 0.15
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.15, 0.3, 0.45 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 3, 4, 5, 6 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath("Hitbox")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.3 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "_damage"
} ]
}

[sub_resource type="Animation" id=5]
resource_name = "Death"
length = 0.6
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 7, 8, 9, 10, 11, 12 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.6 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "queue_free"
} ]
}

[sub_resource type="Animation" id=6]
resource_name = "Frozen"
length = 0.1
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[sub_resource type="Animation" id=7]
resource_name = "Idle"
length = 0.6
loop = true
step = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2 ]
}

[sub_resource type="RectangleShape2D" id=8]
extents = Vector2( 55, 10 )

[sub_resource type="RectangleShape2D" id=9]
extents = Vector2( 15, 4 )

[sub_resource type="CapsuleShape2D" id=10]
radius = 9.0
height = 22.0

[sub_resource type="CircleShape2D" id=11]
radius = 18.0

[node name="Slime" type="KinematicBody2D" groups=[
"enemies",
]]
collision_layer = 4
script = ExtResource( 1 )

[node name="HealthBar" parent="." instance=ExtResource( 11 )]
margin_top = -24.0
margin_bottom = -24.0

[node name="Stats" parent="." instance=ExtResource( 8 )]
max_health = 1000

[node name="StateMachine" type="Node" parent="."]
script = ExtResource( 9 )
stats_path = NodePath("../Stats")

[node name="EffectFSM" type="Node" parent="."]
script = ExtResource( 7 )

[node name="Sprite" type="Sprite" parent="."]
material = ExtResource( 10 )
position = Vector2( -21, -28 )
texture = ExtResource( 6 )
centered = false
hframes = 13
frame = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 7 )
shape = SubResource( 1 )

[node name="EffectsAnimation" type="AnimationPlayer" parent="."]
anims/Damage = SubResource( 2 )
anims/Respawn = SubResource( 3 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Attack = SubResource( 4 )
anims/Death = SubResource( 5 )
anims/Frozen = SubResource( 6 )
anims/Idle = SubResource( 7 )

[node name="PlayerDetectionZone" parent="." instance=ExtResource( 4 )]

[node name="CollisionShape2D" parent="PlayerDetectionZone" index="0"]
shape = SubResource( 8 )

[node name="Stomp" parent="." groups=[
"Hurtbox",
] instance=ExtResource( 5 )]
visible = false
stats_path = NodePath("../Stats")

[node name="CollisionShape2D" parent="Stomp" index="0"]
position = Vector2( 0, -6 )
shape = SubResource( 9 )

[node name="Hitbox" parent="." instance=ExtResource( 3 )]
visible = false
position = Vector2( 0, -1 )
collision_layer = 0
collision_mask = 8

[node name="CollisionShape2D" parent="Hitbox" index="0"]
position = Vector2( 6, -5 )
rotation = 1.5708
shape = SubResource( 10 )

[node name="EnemyHurtbox" parent="." groups=[
"Hurtbox",
] instance=ExtResource( 2 )]
visible = false
effected_by = [ true, true, true, true, true ]
effect_fsm_path = NodePath("../EffectFSM")

[node name="CollisionShape2D" parent="EnemyHurtbox" index="0"]
position = Vector2( 1, 3 )
shape = SubResource( 11 )

[node name="floor_checker" type="RayCast2D" parent="."]
position = Vector2( 18, 17 )
enabled = true
cast_to = Vector2( 0, 5 )
collision_mask = 64
[connection signal="health_updated" from="Stats" to="HealthBar" method="_on_Stats_health_updated"]
[connection signal="immobilized" from="Stats" to="StateMachine" method="_on_Stats_immobilized"]
[connection signal="max_health_updated" from="Stats" to="HealthBar" method="_on_Stats_max_health_updated"]
[connection signal="no_health" from="Stats" to="StateMachine" method="_on_Stats_no_health"]
[connection signal="no_health" from="Stats" to="HealthBar" method="_on_Stats_no_health"]
[connection signal="animation_finished" from="AnimationPlayer" to="StateMachine" method="_on_AnimationPlayer_animation_finished"]
[connection signal="area_entered" from="EnemyHurtbox" to="StateMachine" method="_on_EnemyHurtbox_area_entered"]

[editable path="HealthBar"]

[editable path="PlayerDetectionZone"]

[editable path="Stomp"]

[editable path="Hitbox"]

[editable path="EnemyHurtbox"]
